# ISBN-CHILE

./: .gitignore  README.md  init.sh  poetry_install.sh  pyproject.toml
isbnchile/: merge.py
isbnchile/isbnchile/: items.py  pipelines.py
isbnchile/isbnchile/spiders/: books.py
